<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">
    <!--New-->
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/table_header_linear"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:weightSum="50"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="No"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:layout_weight="4.1"
                android:background="@drawable/table_bg"
                android:id="@+id/table_number"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="45.9">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:weightSum="20"
                    android:orientation="horizontal">
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_time"
                          android:text="@string/time"/>
                <TextView style="@style/table_cell_type2"
                          android:id="@+id/table_customer_name"
                          android:text="@string/customer_name_1"/>
                <TextView style="@style/table_cell_type2"
                          android:id="@+id/table_contact_us"
                          android:text="@string/contact"/>
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_co_delivery"
                          android:text="@string/join_delivery"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_municipality"
                          android:text="@string/municipal"/>
                <TextView android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="10"
                          android:text="@string/product_name_1"
                          android:background="@drawable/table_bg"
                          android:gravity="center"
                          android:textColor="@color/black"
                          android:id="@+id/table_product"/>
                <TextView android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="3"
                          android:id="@+id/table_quantity"
                          android:background="@drawable/table_bg"
                          android:textColor="@color/black"
                          android:gravity="center"
                          android:text="@string/quantity_1"/>
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_delivery_category"
                          android:text="@string/delivery_category"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

