<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/table_header_linear"
            android:layout_height="60dp"
            android:weightSum="50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/as_table_row_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="No"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="4.1"
                android:background="@drawable/table_bg"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="45.9">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:weightSum="20"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/as_table_visit_time"
                        android:text="@string/time"
                        style="@style/table_cell_type1"/>

                <TextView
                        android:id="@+id/as_table_custname"
                        android:text="@string/dlv_custname"
                        style="@style/table_cell_type2"
                />
                <TextView style="@style/table_cell_type2"
                          android:id="@+id/as_table_contact"
                          android:text="@string/contact"/>

                <TextView style="@style/table_cell_type1"
                          android:id="@+id/as_table_nmcity"
                          android:text="@string/Municipality"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_height="0dp">

                <TextView
                        android:id="@+id/as_model_name"
                        android:layout_width="0dp"
                        android:layout_weight="9.99"
                        android:text="@string/as_model_name"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/table_bg"/>

                <TextView android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:id="@+id/as_symptom_code"
                          android:textColor="@color/black"
                          android:layout_weight="10"
                          android:gravity="center"
                          android:background="@drawable/table_bg"
                          android:text="@string/as_symptom_code"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>