<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".DeliveryList">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="#fff"
            app:subtitleTextColor="#f5fbff"
            android:padding="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="left"
            android:id="@+id/shipping_list_first_linear"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
    >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping_article"
                    android:gravity="left|center_vertical"
                    android:textColor="@color/black"
            />
            <TextView
                    android:id="@+id/saEt"
                    android:layout_weight="1"
                    style="@style/edit_text_style"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp">
            <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:textColor="@color/black"
                    android:text="@string/delivery_vehicel"
            />
            <Spinner
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textColor="@color/white"
                    android:background="@drawable/spinnter_back"
                    android:id="@+id/vehicle_spinner"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:weightSum="10"
                android:layout_marginTop="5dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:text="@string/delivery_date"
            />
            <LinearLayout android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="7"
            >
                <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:background="@drawable/button_left"
                        android:id="@+id/dlvlist_btn_left"/>
                <TextView
                        android:layout_width="0dp"
                        android:id="@+id/dlvlist_dt_tv"
                        android:layout_height="30dp"
                        android:text="@string/select_date"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/date_picker_rounded"/>
                <Button android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:background="@drawable/button_right"
                        android:id="@+id/dlvlist_btn_right"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/table_header_linear"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:background="@color/table_header"
            app:layout_constraintTop_toBottomOf="@+id/shipping_list_first_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            android:weightSum="50"
            android:layout_marginStart="8dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="No"
                android:gravity="center"
                android:padding="5dp"
                android:layout_weight="4.1"
                android:textColor="@color/white"
                android:background="@drawable/table_bg"
                android:id="@+id/table_number"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="45.9">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:weightSum="20"
                    android:orientation="horizontal">
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_time"
                          android:textColor="@color/white"
                          android:text="@string/time"/>
                <TextView style="@style/table_cell_type2"
                          android:id="@+id/table_customer_name"
                          android:textColor="@color/white"
                          android:text="@string/customer_name_1"/>
                <TextView style="@style/table_cell_type2"
                          android:id="@+id/table_contact_us"
                          android:textColor="@color/white"
                          android:text="@string/contact"/>
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_co_delivery"
                          android:textColor="@color/white"
                          android:text="@string/join_delivery"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_height="0dp">
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_municipality"
                          android:textColor="@color/white"
                          android:text="@string/municipal"/>
                <TextView android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="10"
                          android:text="@string/product_name_1"
                          android:textColor="@color/white"
                          android:background="@drawable/table_bg"
                          android:gravity="center"
                          android:id="@+id/table_product"/>
                <TextView android:layout_width="0dp"
                          android:layout_height="match_parent"
                          android:layout_weight="3"
                          android:id="@+id/table_quantity"
                          android:background="@drawable/table_bg"
                          android:textColor="@color/white"
                          android:gravity="center"
                          android:text="@string/quantity_1"/>
                <TextView style="@style/table_cell_type1"
                          android:id="@+id/table_delivery_separated"
                          android:textColor="@color/white"
                          android:text="@string/delivery_category"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tableRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintTop_toBottomOf="@+id/table_header_linear" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <LinearLayout
            android:layout_below="@+id/tableRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout">
        <Button
                android:id="@+id/btn_f_to_delivery_detail"
                android:layout_below="@id/tableRecycler"
                android:layout_width="80dp"
                android:text="@string/btn_dl_detail"
                style="@style/button_style_1"/>
        <Button
                android:id="@+id/btn_complete_processing"
                android:layout_below="@id/tableRecycler"
                android:layout_width="80dp"
                style="@style/button_style_1"
                android:text="@string/btn_dl_complete"
                android:layout_marginLeft="10dp"/>
        <Button
                android:id="@+id/btn_installation_confirm"
                android:layout_height="40dp"
                style="@style/button_style_1"
                android:layout_width="80dp"
                android:text="@string/btn_dl_install_confirm"
                android:layout_marginLeft="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>