<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="0.5"
                  android:gravity="center"
                  style="@style/table_text"
                  android:text="No"
                  android:id="@+id/up_no"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center"
                  style="@style/table_text"
                  android:text="@string/product_name"
                  android:id="@+id/up_product_name"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center"
                  style="@style/table_text"
                  android:text="@string/unit_price"
                  android:id="@+id/up_unit_price"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center"
                  style="@style/table_text"
                  android:text="@string/quantity"
                  android:id="@+id/up_quantity"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center"
                  style="@style/table_text"
                  android:text="@string/Municipality"
                  android:id="@+id/up_municipality"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>